--- a/package.json
+++ b/package.json
@@ -3,19 +3,19 @@
   "version": "0.1.0",
   "description": "Array find first value utility",
   "readme": "Array find first value utility",
-  "main": "index.min.js",
+  "main": "dist/index.min.js",
   "files": [
-    "index.js",
-    "index.min.js"
+    "dist/index.min.js",
+    "index.js"
   ],
   "devDependencies": {
+    "dist": "jeromedecoster/dist",
     "tape": "~3",
-    "uglify-js": "~2.4",
-    "combine-streams": "~0"
+    "tap-min": "~0.1"
   },
   "scripts": {
-    "test": "tape test/**/*.js",
-    "build": "node scripts/build"
+    "test": "tape test/**/*.js | tap-min",
+    "dist": "dist index.js -o dist/index.min.js"
   },
   "repository": {
     "type": "git",
