--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "find",
   "version": "0.4.0",
-  "description": "Array find value utility",
-  "readme": "Array find value utility",
+  "description": "Array find utility",
+  "readme": "Array find utility",
   "main": "index.js",
   "files": [
     "index.js"
